unpackaged/objects/CAMS_Assignment__c.object
<CustomObject>
    <description>Custom object for CAMS app. Creates a record for tracking correspondence....</description>
    <fields>
        <fullName>Absence_Dates__c</fullName>
        <label>Absence Dates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When created, this will default to your name</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendee_s__c</fullName>
        <label>Attendee(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Author_Name__c</fullName>
        <description>Enter Author name and/or address</description>
        <label>Author Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BDO_Suborganization__c</fullName>
        <label>Division, Office or Program</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BDO__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Climate Policy</fullName>
                </value>
                <value>
                    <fullName>Environmental Policy</fullName>
                </value>
                <value>
                    <fullName>Health and Public Policy</fullName>
                </value>
                <value>
                    <fullName>Legislative Affairs</fullName>
                </value>
                <value>
                    <fullName>Law Enforcement and Counsel</fullName>
                </value>
                <value>
                    <fullName>Environmental Justice and Tribal</fullName>
                </value>
                <value>
                    <fullName>Fiscal and Admin Programs</fullName>
                </value>
                <value>
                    <fullName>Unified Program</fullName>
                </value>
                <value>
                    <fullName>Chief Information Officer</fullName>
                </value>
                <value>
                    <fullName>PRA</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Executive Office</fullName>
                </value>
                <value>
                    <fullName>Legislative Office</fullName>
                </value>
                <value>
                    <fullName>Legal Office</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Secretary</fullName>
                    <isActive>false</isActive>
                    <label>Secretary</label>
                </value>
                <value>
                    <fullName>Undersecretary</fullName>
                    <isActive>false</isActive>
                    <label>Undersecretary</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDO__c</fullName>
        <defaultValue>CASE($User.BDO__c, 
&quot;ARB&quot;, &quot;ARB&quot;,
&quot;CalRecycle&quot;,&quot;CalRecycle&quot;,
&quot;DTSC&quot;,&quot;DTSC&quot;,
&quot;DPR&quot;,&quot;DPR&quot;,
&quot;SWRCB&quot;,&quot;SWRCB&quot;,
&quot;OEHHA&quot;,&quot;OEHHA&quot;,
&quot;Agency&quot;)</defaultValue>
        <description>Defines the Department, Board or Office that initiated the assignment.</description>
        <label>BDO</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARB</fullName>
                </value>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>CalRecycle</fullName>
                </value>
                <value>
                    <fullName>DPR</fullName>
                </value>
                <value>
                    <fullName>DTSC</fullName>
                </value>
                <value>
                    <fullName>OEHHA</fullName>
                </value>
                <value>
                    <fullName>SWRCB</fullName>
                </value>
                <value>
                    <fullName>OOS</fullName>
                    <isActive>false</isActive>
                    <label>OOS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <description>Detailed notes and comments regarding the assignment</description>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Closed_Withdrawn_Date__c</fullName>
        <label>Closed/Withdrawn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates when an item is confidential and requires special handling/sharing rules.</description>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Detailed notes and comments regarding the assignment ......Added by Susmita</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Document_Number__c</fullName>
        <label>Document Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <defaultValue>TODAY() +14</defaultValue>
        <description>Date when correspondence is due back after review and sign</description>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_City__c</fullName>
        <label>Event City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Hours__c</fullName>
        <label>Event Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Sponsor__c</fullName>
        <label>Event Sponsor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_State__c</fullName>
        <defaultValue>&quot;California&quot;</defaultValue>
        <label>Event State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <label>Event Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Zip_Code__c</fullName>
        <label>Event Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excess_Lodging__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Excess Lodging</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expenses_not_to_Exceed__c</fullName>
        <description>Does not need to be resubmitted if actual costs do not vary more than 10% from this estimate.</description>
        <inlineHelpText>Does not need to be resubmitted if actual costs do not vary more than 10% from this estimate.</inlineHelpText>
        <label>Expenses not to Exceed $</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Outcome__c</fullName>
        <label>Final Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flag_Logged_In_User_Program__c</fullName>
        <formula>IF( OR($Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;System Admin&quot; ), 1, IF( $User.Division  = TEXT( BDO_Suborganization__c ) , 1 , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Logged In User Program</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flag_Logged_In_User__c</fullName>
        <formula>IF( OR($Profile.Name = &quot;System Administrator&quot;,$Profile.Name = &quot;System Admin&quot; ), 1, IF( TEXT($User.BDO__c) = TEXT(BDO__c) , 1 , 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Logged In User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_of_Original__c</fullName>
        <description>How the initial correspondence was received.</description>
        <label>Form of Original</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Memo</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Other/General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <description>Do not enter numerical code. 
Enter full name of the fund as shown in the Governor&apos;s Budget</description>
        <inlineHelpText>Do not enter numerical code.
Enter full name of the fund as shown in the Governor&apos;s Budget.</inlineHelpText>
        <label>Fund</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Governor_s_Office_Number__c</fullName>
        <description>Value provided by the Governor&apos;s Office</description>
        <externalId>true</externalId>
        <label>Governor&apos;s Office Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Internal_Tracking_ID__c</fullName>
        <label>Internal Tracking ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission_Critical_Justification__c</fullName>
        <label>Mission Critical Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mission_Critical_Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if
- Enforcement Responsibility
- Auditing
- Revenue Collection
- Function required by Statute, Contract or Executive Directive
- Required License Maintenance &amp; Training
- Contract required Equipment inspection
- Grant Meeting
- Litigation</inlineHelpText>
        <label>Mission Critical Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Assignments__c</fullName>
        <formula>Assigned_To__r.Alias =  $User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments (Originator)</relationshipLabel>
        <relationshipName>Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>* Requires approval by the Governors Director of Operations</inlineHelpText>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Attendance__c</fullName>
        <label>Purpose of Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <description>Date Correspondence was received</description>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Regular_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check here if regular board meeting, workshop or other meeting required by statute.</inlineHelpText>
        <label>Regular Meeting or Workshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reply_By__c</fullName>
        <description>Reply method of assignment</description>
        <label>Reply By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Letter/Memo</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Inter-Agency</fullName>
                </value>
                <value>
                    <fullName>Governors Office</fullName>
                    <isActive>false</isActive>
                    <label>Governors Office</label>
                </value>
                <value>
                    <fullName>In Person</fullName>
                    <isActive>false</isActive>
                    <label>In Person</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signature_Of__c</fullName>
        <label>For Signature Of</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Secretary</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Deputy Director/ Designee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Signed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lists the specific contact person who signed the letter, regardless of internal of external contact.</description>
        <label>Signed by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CAMS_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Pending&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Back to BDO</fullName>
                    <isActive>false</isActive>
                    <label>Back to BDO</label>
                </value>
                <value>
                    <fullName>Delegated</fullName>
                    <isActive>false</isActive>
                    <label>Delegated</label>
                </value>
                <value>
                    <fullName>Governor&apos;s Office</fullName>
                    <isActive>false</isActive>
                    <label>Governor&apos;s Office</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of Correspondence</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Event_Cost__c</fullName>
        <label>Total Estimated Event Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Distance_From_HQ__c</fullName>
        <inlineHelpText>One Way Miles</inlineHelpText>
        <label>Travel Distance From HQ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>MID(RecordType.Name, 3, LEN(RecordType.Name)-2)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to flag if a correspondence needs to be expedited</description>
        <label>Urgent</label>
        <type>Checkbox</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All_Assignments</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>BDO__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Originator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Assignments</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Assignments</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>BDO__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Withdrawn</value>
        </filters>
        <label>All Open Assignments</label>
    </listViews>
    <listViews>
        <fullName>My_Assignments</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>BDO__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Originator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Assignments__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Withdrawn</value>
        </filters>
        <label>My Open Assignments</label>
    </listViews>
    <listViews>
        <fullName>Open_Assignments_for_Assigners</fullName>
        <columns>NAME</columns>
        <columns>BDO__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flag_Logged_In_User_Program__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress,Completed</value>
        </filters>
        <label>Open Assignments for Assigners</label>
    </listViews>
    <listViews>
        <fullName>Open_Assignments_for_Coordinators</fullName>
        <columns>NAME</columns>
        <columns>BDO__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flag_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress,Completed</value>
        </filters>
        <label>Open Assignments for Coordinators</label>
    </listViews>
    <listViews>
        <fullName>Open_Assignments_for_Executives</fullName>
        <columns>NAME</columns>
        <columns>BDO__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flag_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress,Completed</value>
        </filters>
        <label>Open Assignments for Executives</label>
    </listViews>
    <listViews>
        <fullName>Open_Assignments_for_Reviewers</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>BDO__c</columns>
        <columns>BDO_Suborganization__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flag_Logged_In_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress,Completed</value>
        </filters>
        <filters>
            <field>Flag_Logged_In_User_Program__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Open Assignments for Reviewers</label>
    </listViews>
    <nameField>
        <displayFormat>CAMS-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <recordTypes>
        <fullName>Controlled_Correspondence</fullName>
        <active>true</active>
        <label>4 Controlled Correspondence</label>
    </recordTypes>
    <recordTypes>
        <fullName>Goldenrod</fullName>
        <active>true</active>
        <label>3 Goldenrod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Governors_Office_Action_Request_GOAR</fullName>
        <active>true</active>
        <label>8 Governor&apos;s Office Action Request (GOAR)</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_State_Travel</fullName>
        <active>true</active>
        <label>1 In State Travel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mandated_Legislative_Reports</fullName>
        <active>true</active>
        <label>5 Mandated Legislative Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>Out_of_State_Travel</fullName>
        <active>true</active>
        <label>2 Out of State Travel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Regulation_Package</fullName>
        <active>true</active>
        <label>6 Pre-Regulation Package</label>
    </recordTypes>
    <recordTypes>
        <fullName>Regulation_Package</fullName>
        <active>true</active>
        <label>7 Regulation Package</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Owner_Group__c</fullName>
        <label>Owner Group</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Record_Creator__c</fullName>
        <label>Record Creator</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Tasked_Group__c</fullName>
        <label>Tasked Group</label>
    </sharingReasons>
    <validationRules>
        <fullName>BDO_User</fullName>
        <active>true</active>
        <description>BDO – This will always default to the BDO of the logged in user and cannot be modified.</description>
        <errorConditionFormula>AND(
     ISNEW(),
     TEXT(BDO__c)&lt;&gt;TEXT($User.BDO__c),
     OR(
          AND(
               $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
               $Profile.Name &lt;&gt; &quot;System Admin&quot;
              )
       )
)</errorConditionFormula>
        <errorDisplayField>BDO__c</errorDisplayField>
        <errorMessage>Must match the User&apos;s BDO</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Withdrawn_Date_Cannot_Be_Future</fullName>
        <active>true</active>
        <errorConditionFormula>Closed_Withdrawn_Date__c  &gt; TODAY()</errorConditionFormula>
        <errorMessage>Closed/Withdrawn Date cannot be in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Withdrawn_Date_Empty_Not_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( Status__c )&lt;&gt;&apos;Closed&apos;, TEXT( Status__c )&lt;&gt;&apos;Withdrawn&apos;, NOT(ISBLANK(Closed_Withdrawn_Date__c)))</errorConditionFormula>
        <errorMessage>Closed/Withdrawn Date must be empty if status is not Closed or Withdrawn</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Withdrawn_Date_Required_if_Closed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISCHANGED(Status__c)),TEXT( Status__c )=&apos;Closed&apos;, ISBLANK(Closed_Withdrawn_Date__c))</errorConditionFormula>
        <errorMessage>Closed/Withdrawn Date is required if status is Closed or Withdrawn</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Withdrawn_Date_Required_if_Withdr</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISCHANGED(Status__c)),TEXT( Status__c )=&apos;Withdrawn&apos;, ISBLANK(Closed_Withdrawn_Date__c))</errorConditionFormula>
        <errorMessage>Closed/Withdrawn Date is required if status is Closed or Withdrawn</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_less_than_6_Days_From_Today</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNEW(), IF(AND(OR(RecordType.DeveloperName = &apos;In_State_Travel&apos;, RecordType.DeveloperName = &apos;Out_of_State_Travel&apos;), ( Due_Date__c &lt; Today()+6)), TRUE, FALSE), FALSE)</errorConditionFormula>
        <errorMessage>Please allow six days to process a travel request.  If you need less than six days, please contact michelle.hutzel@calepa.ca.gov or Ashlyne.Poston@calepa.ca.gov for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Event_End_Date_Cant_be_before_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Event_End_Date__c &lt;  Event_Start_Date__c</errorConditionFormula>
        <errorMessage>Event End Date cannot be before Event Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Moving_Status</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(Status__c),&quot;Completed&quot;), ISPICKVAL(Status__c,&quot;In Progress&quot;))</errorConditionFormula>
        <errorMessage>You can only move the Status to Closed or Withdrawn</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_must_be_a_Queue</fullName>
        <active>true</active>
        <errorConditionFormula>LEFT(OwnerId,3) = &apos;005&apos;</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>The Owner must be a Queue</errorMessage>
    </validationRules>
</CustomObject>